# ics-api

./: Cargo.toml  schedule.ics
src/: main.rs  parse_ics.rs
