[package]
name = "icalender-service"
version = "0.1.0"
authors = ["littleTitan <luke.ballmer@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lazy_static = "1.4.0"
rocket = "0.4.2"
reqwest = "0.9.24"

[dependencies.ical]
version = "0.5.*"
default-features = false
features = ["property"]